[package]
name = "ojc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.8", features = ["derive"] }
inquire = "0.6.2"
json = "0.12.4"
shellexpand = "3.1.0"
